--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<h1>Bem-vindo ao Centralizador de Formulários</h1>
 	<nav id="menu">
 		<ul>
-			<li><a href="SERV.html">SERVIÇOS</a></li>
+			<li><a href="SERV.html">SERVIÇO</a></li>
 			<li><a href="INSP.html">INSPEÇÕES</a></li>
 		</ul>
 	</nav>
