--- a/SERV.html
+++ b/SERV.html
@@ -50,7 +50,7 @@
 	</style>
 </head>
 <body>
-	<h1>Bem viandos a aba de serviços</h1>
+	<h1>Bem viandos a serviços</h1>
 	<nav id="menu">
 		<ul>
 			<li><a href="https://forms.gle/xs2zTUoUiND64XNF9" target="_blank">SERVIÇO B</a></li>
